# kmux

./: .coverage  README.md  README_zh.md  kmux-tests.patch  pyproject.toml  pytest.ini  run_all_tests.sh  run_input_detector.py  run_tests.sh  run_tty_session.py
.github/workflows/: tests.yml
src/kmux/: __main__.py  app.py  documentation.py  terminal_server.py
src/kmux/terminal/: block_pty_session.py  pty_session.py  terminal_server.py  tty_session.py  utils.py
tests/: conftest.py  test_block_pty_session.py  test_block_session.py  test_integration.py  test_interactive.py  test_output_correctness.py  test_pipes_redirection.py  test_pty_session.py  test_simple_import.py  test_snapshot_segments.py  test_terminal_server.py  test_utils.py
tests/integration/: test_block_segmentation.py  test_bug_reproduction.py  test_mcp_e2e.py  test_real_zsh.py  test_terminal_server_e2e.py  test_zsh_integration.py
tests/unit/: test_app.py  test_app_tools.py  test_block_pty_session.py  test_init.py  test_lifespan.py  test_terminal_server.py  test_utils.py
