[project]
name = "kmux"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiorwlock>=1.5.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pyte>=0.8.2",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "pytest>=8.4.2",
    "coverage>=7.10.6",
    "pytest-asyncio>=1.2.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"