[project]
name = "kmux"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiorwlock>=1.5.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pyte>=0.8.2",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1 --cov=kmux --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/kmux"]

[tool.coverage.report]
show_missing = true
skip_covered = true
