[project]
name = "kmux"
version = "0.0.8"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiorwlock>=1.5.0",
    "coloredlogs>=15.0.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pyte>=0.8.2",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
